# EMPFitter

./: CMakeLists.txt  Doxyfile  README.md
include/: echmetelmigparamsfitter.h
src/: elmigparamsfitter.cpp  elmigparamsfitter_config.h.in  funcs.h  mobdissocregressor.cpp  mobdissocregressor.h  parametersfixerimpl.cpp  parametersfixerimpl.h  totalequilibrium.h  totalequilibrium.hpp  types.h
